# voice-of-customer

./: .gitignore  README.md  main.py  pyproject.toml  test.db
docs/superpowers/plans/: 2026-04-12-signalgraph-backend.md
src/signalgraph/: config.py  database.py  main.py  scheduler.py
src/signalgraph/api/: briefs.py  companies.py  health.py  mentions.py  themes.py
src/signalgraph/models/: __init__.py  analysis.py  brief.py  company.py  mention.py
src/signalgraph/pipeline/: analyzer.py  briefer.py  legitimacy.py  memory.py  normalizer.py  runner.py
src/signalgraph/schemas/: analysis.py  brief.py  company.py  mention.py
src/signalgraph/sources/: appstore.py  base.py  hackernews.py  playstore.py  reddit.py  trustpilot.py  websearch.py  youtube.py
src/signalgraph/static/: index.html
tests/: conftest.py  test_analyzer.py  test_briefer.py  test_company_api.py  test_health.py  test_legitimacy.py  test_memory.py  test_mention_api.py  test_models.py  test_normalizer.py  test_pipeline_runner.py  test_scheduler.py  test_source_appstore.py  test_source_reddit.py  test_sources_remaining.py
